src/objects/fflbx__LockboxImportMapping__c.object
<CustomObject>
    <customHelpPage>fflbx__lockboxhelp</customHelpPage>
    <fields>
        <fullName>fflbx__CashEntryLineFieldAPIName__c</fullName>
        <label>Cash Entry Line Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__CashEntryLineFieldName__c</fullName>
        <label>Cash Entry Line Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__ColumnNumber__c</fullName>
        <label>Column Start Position</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__FieldAPIName__c</fullName>
        <label>Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__FieldName__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fflbx__LineGrouping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cash Entry Line Grouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__LockboxImportDefinition__c</fullName>
        <label>Bank Lockbox Import Definition</label>
        <referenceTo>fflbx__LockboxImportDefinition__c</referenceTo>
        <relationshipLabel>Bank Lockbox Import Mappings</relationshipLabel>
        <relationshipName>LockboxImportMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Bank Lockbox Import Mapping</label>
    <nameField>
        <displayFormat>LIM-{0000}</displayFormat>
        <label>Bank Lockbox Import Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Lockbox Import Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>